# ecphoria

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  PRODUCT-SPEC.md  README.md  ROADMAP.md  ecphoria.toml  render.yaml  strata.toml
.github/workflows/: bench.yml  ci.yml  release.yml
bindings/python/src/: lib.rs
crates/ecphoria-cli/: CLAUDE.md
crates/ecphoria-cli/src/: main.rs
crates/ecphoria-core/: CLAUDE.md
crates/ecphoria-core/examples/: embedded.rs
crates/ecphoria-core/src/: config.rs  embedded.rs  engine.rs  lib.rs
crates/ecphoria-gateway/: CLAUDE.md
crates/ecphoria-gateway/proto/: ecphoria.proto
crates/ecphoria-gateway/src/: cdc.rs  server.rs
crates/strata-cli/: CLAUDE.md  Cargo.toml
crates/strata-cli/src/: client.rs  main.rs
crates/strata-cluster/: CLAUDE.md  Cargo.toml
crates/strata-cluster/src/: config.rs  coordinator.rs  lib.rs
crates/strata-cluster/tests/: grpc_transport.rs  multi_node.rs
crates/strata-core/: CLAUDE.md  Cargo.toml
crates/strata-core/benches/: engine.rs
crates/strata-core/data/: state.db
crates/strata-core/data/vectors/: index.usearch
crates/strata-core/examples/: locomo_eval.rs
crates/strata-core/src/: authz.rs  config.rs  engine.rs  lib.rs
crates/strata-core/src/embedding/: local.rs  mod.rs  ollama.rs  openai.rs
crates/strata-core/src/ingest/: pipeline.rs  webhook.rs
crates/strata-core/src/llm/: claude_cli.rs
crates/strata-core/src/memory/: cognition.rs  episodic.rs  mod.rs  semantic.rs  state.rs
crates/strata-core/src/query/: executor.rs  functions.rs  planner.rs
crates/strata-core/src/runtime/: mod.rs  store.rs  tools.rs
crates/strata-core/src/storage/: s3.rs  tiering.rs
crates/strata-gateway/: CLAUDE.md  Cargo.toml  build.rs
crates/strata-gateway/data/: state.db
crates/strata-gateway/proto/: strata.proto
crates/strata-gateway/src/: lib.rs  server.rs
deploy/: docker-compose.cluster.yml
docs/: api-reference.md  architecture.md  benchmarks-compare.md  benchmarks.md  connect-claude.md  deployment.md  getting-started.md  openapi.yaml  security.md
docs/adr/: ADR-001-duckdb-for-episodic-memory.md  ADR-002-usearch-over-pgvector.md  ADR-003-raft-for-clustering.md  ADR-004-single-binary-architecture.md  README.md
docs/archive/: PRODUCT-SPEC.md
docs/blog/: why-we-built-ecphoria.md  why-we-built-strata.md
ecphoria-server/src/: banner.rs  main.rs
examples/autogen-with-strata/: README.md  main.py  requirements.txt
examples/claude-agent/: README.md  agent.py  mcp_config.json
examples/crewai-with-strata/: README.md  main.py  requirements.txt  strata_tools.py
examples/grafana-dashboard/: README.md  docker-compose.yml  prometheus.yml  seed.sh
examples/langchain-rag/: README.md  ingest.py  rag_chain.py  requirements.txt  strata_retriever.py
examples/multi-agent-support/: Dockerfile  README.md  docker-compose.yml  simulate.py
examples/product-tour/: README.md  tour.sh
examples/web-ui/: README.md
ops/cluster-local/: README.md  run-cluster.sh  run-sharded.sh  sharding-test.sh  stop-cluster.sh
ops/operator/: Cargo.toml  Dockerfile  README.md
scripts/: gen-pg-tls.sh  test-admin-ui.mjs
sdk/go/: README.md  go.mod
sdk/python/: pyproject.toml
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
strata-server/: CLAUDE.md  Cargo.toml
strata-server/src/: banner.rs  main.rs
tests/integration/: Cargo.toml
(+100 files in other folders)
