[package]
name = "strata-server"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Main server binary for the Strata context lake"

[[bin]]
name = "strata-server"
path = "src/main.rs"

[features]
# Passthrough to strata-core's optional local ONNX backends (off by default; each pulls a heavy
# native onnxruntime dep + model download). Build e.g.:
#   cargo build -p strata-server --release --features embed-local
embed-local = ["strata-core/embed-local"]
rerank-local = ["strata-core/rerank-local"]

[dependencies]
strata-core.workspace = true
strata-gateway.workspace = true
strata-cluster.workspace = true

tokio.workspace = true
config.workspace = true
serde.workspace = true
toml.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

anyhow.workspace = true
clap.workspace = true
mimalloc.workspace = true
