[package]
name = "strata-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core engine for the Strata context lake"

[features]
# Local ONNX cross-encoder reranker (bge-reranker via fastembed/ort). Off by default — pulls a heavy
# native onnxruntime dependency and downloads model weights on first use.
rerank-local = ["dep:fastembed"]

[dependencies]
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Optional: local cross-encoder reranker backend (feature `rerank-local`).
fastembed = { version = "4", optional = true }

duckdb.workspace = true
rusqlite.workspace = true
usearch.workspace = true

aws-sdk-s3.workspace = true
aws-config.workspace = true

reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true
sqlparser.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
metrics.workspace = true

uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
toml.workspace = true
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "engine"
harness = false
